# tmGrammars

./: .gitignore  .pdm-python  Readme.md  package.json  pyproject.toml  tsconfig.json  typedoc.json
lib/: builders.mjs  builders.ts  cfgrCollector.ts  cfgrHelpers.ts  configBase.ts  configBuild.ts  configITrace.ts  configTrace.ts  configuration.mjs  configurator.ts  documents.mjs  documents.ts  grammars.mjs  grammars.ts  logging.mjs  logging.ts  runner.ts  scopeActions.mjs  scopeActions.ts  structures.mjs  structures.ts  tmgt.mjs  tmgt.ts
scripts/: installEditableTMGCCommand  installEditableTMGCPYCommand  installEditableTMGTCommand  installEditableTMGTPYCommand  pushChanges  spl
src/: configuration.mjs  documents.mjs  grammars.mjs  scopeActions.mjs  structures.mjs  tmgc.mjs  tmgt.mjs
test/: Readme.md  test.builders.mjs  test.builders.ts  test.builders.ts.old  test.cfgrCollector.ts  test.cfgrHelpers.ts  test.configuration.mjs  test.configuration.ts.old  test.configurator.ts  test.documents.mjs  test.documents.ts  test.documents.ts.old  test.grammars.mjs  test.grammars.ts  test.grammars.ts.old  test.logging.mjs  test.logging.ts  test.scopeActions.mjs  test.scopeActions.ts  test.scopeActions.ts.old  test.structures.mjs  test.structures.ts  test.structures.ts.old
tmGrammars/: cli.py  configuration.py  grammar.py
